Colab을 통해 생성됨

--- a/실험계획법_4장.ipynb
+++ b/실험계획법_4장.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMeAer+7HiyTZeJ/c2p4HUC",
+      "authorship_tag": "ABX9TyMPMtd+CBX0T7SsGI69H5Mr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,7 +113,7 @@
         "id": "YTqgCk-KDsiV",
         "outputId": "e9cb2b34-8034-4212-80cd-ce4117aad515"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -697,7 +697,7 @@
         "id": "ONFFPR6iNdm6",
         "outputId": "8f416f8d-62fd-4f2a-b14c-acb3377e50bf"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1083,7 +1083,7 @@
         "id": "orIwmPfPQ-yQ",
         "outputId": "ffbe1f16-ab97-4022-e9a0-8c472c8b0026"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1121,6 +1121,18 @@
       ],
       "metadata": {
         "id": "oyx8S0CeUZdm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## random effect 모형\n",
+        "- 실험 요인을 완벽하게 통제할 수 없는 경우 요인 값을 확률변수로 두어야함\n",
+        "- 일원배치 radon effect 모형은 다음과 같다\n",
+        "- $Y_{ij} = \\mu + \\tau_{i} + ϵ_{ij}이고,  \\tau \\sim N(0,\\sigma_{\\tau}^2), ϵ \\sim N(0,σ^2)$\n"
+      ],
+      "metadata": {
+        "id": "QgsOhbQIvAuy"
       }
     },
     {
